--- a/css/apps.css
+++ b/css/apps.css
@@ -70,3 +70,11 @@ body {
 .codeButton {
   margin-left: 20%;
 }
+
+#footer {
+  background-color: var(--NavBarColor);
+}
+
+.footer-contact-logo-container {
+  display: inline-block;
+}
