--- a/css/research.css
+++ b/css/research.css
@@ -66,6 +66,14 @@ body {
   pointer-events: none;
 }
 
+#footer {
+  background-color: var(--NavBarColor);
+}
+
+#footer-contact-logo-container {
+  display: inline-block;
+}
+
 @media only screen and (max-width: 768px) and (orientation: portrait) {
   #grid_container {
     margin: 2em;
