--- a/css/blog.css
+++ b/css/blog.css
@@ -112,6 +112,19 @@ body {
   pointer-events: none;
 }
 
+/* Uncomment the following when sufficient number of blog entries... */
+
+/* #footer {
+  background-color: var(--NavBarColor);
+}
+
+#footer-contact-logo-container {
+  display: inline-block;
+}
+#return-arrow-container {
+  display: inline-block;
+} */
+
 @media only screen and (max-width: 768px) and (orientation: portrait) {
   .topic-banner-entry {
     width: 4em;
