--- a/css/research.css
+++ b/css/research.css
@@ -73,6 +73,9 @@ body {
 #footer-contact-logo-container {
   display: inline-block;
 }
+#return-arrow-container {
+  display: inline-block;
+}
 
 @media only screen and (max-width: 768px) and (orientation: portrait) {
   #grid_container {
