--- a/css/master.css
+++ b/css/master.css
@@ -65,7 +65,8 @@ a {
   position: sticky;
   top: 0px;
   height: 7vh;
-  padding-top: 1.5em;
+  padding-top: 2em;
+  /* margin-top: 3vh; */
   background-color: var(--BackgroundColor);
   z-index: 2;
 }
@@ -134,8 +135,6 @@ a {
   background-color: var(--BackgroundColor);
   width: 100%;
   height: 5vh;
-  /* border-left: 1px solid var(--FontColor);
-  border-right: 1px solid var(--FontColor); */
   font-size: 2.0vw;
   text-align: center;
   margin: 0vw;
@@ -149,7 +148,7 @@ a {
   min-height: 100vh;
 }
 #content-wrap {
-  padding-top: 5vh;
+  padding-top: 3vh;
   padding-bottom: 15vh;
 }
 #footer {
@@ -158,7 +157,6 @@ a {
   width: 100%;
   height: 15vh;
   display: inline-block;
-  margin-top: 1.5em;
   background-color: var(--BackgroundColor);
 }
 #footer-content {
@@ -166,14 +164,14 @@ a {
   color: var(--FontColor);
   text-align: center;
   width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 #credits-container {
   display: inline-block;
   text-align: center;
-  vertical-align: middle;
-  width: 40%;
-  margin-top: 3em;
-  margin-bottom: 3em;
+  align-self: center;
 }
 #my-name-in-footer {
   display: inline-block;
@@ -200,15 +198,12 @@ a {
   width: 4em;
 }
 #footer-contact-logo-container {
-  width: 30%;
   display: none;
   text-align: center;
-  vertical-align: middle;
-  margin-top: 3em;
-  margin-bottom: 3em;
+  align-self: center;
 }
 .footer-contact-logo {
-  width: 2.5em;
+  width: 10%;
   margin-left: 1.2em;
   margin-right: 1.2em;
   margin-top: 0;
@@ -220,8 +215,6 @@ a {
 #return-arrow-container {
   display: none;
   margin: 0;
-  width: 30%;
-  height: 100%;
 }
 
 #menu {
@@ -255,7 +248,7 @@ a {
 #return-to-start-arrow {
   display: none;
   position: fixed;
-  top: 90vh;
+  top: 91vh;
   left: 85vw;
   width: 2em;
   height: 2em;
@@ -304,40 +297,51 @@ a {
   #return-to-start-arrow {
     display: none;
   }
+  .footer-contact-logo {
+    width: 15%;
+  }
 }
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 450px) {
   #return-to-start-arrow {
-    /* top: 70vh; */
     left: 75vw;
+  }
+  .footer-contact-logo {
+    width: 10%;
+  }
+  #content-wrap {
+    padding-bottom: 30vh;
+  }
+  #footer {
+    height: 30vh;
   }
 }
 @media only screen and (max-width: 768px) and (orientation: portrait) {
   :root {
     --ColumnWidth: 80vw;
-    /* --TextFontSize: 1.2em; */
   }
   #footer-content {
     font-size: 1.1em;
   }
-  /* .footer-code-symbol {
-    font-size: 3.5vw;
-  } */
   #my-logo-container {
     display: none;
   }
   #navbar-container {
     padding-top: 0;
+    padding-bottom: 1vh;
   }
   #navbar {
     position: absolute;
     top: 6vh;
     width: 100vw;
     margin: 0;
-    padding-top: 3vh;
+    margin-top: 2vh;
     display: none;
     text-align: left;
     background-color: inherit;
     background-color: var(--GridItemColor);
+  }
+  #home {
+    padding-top: 2vh;
   }
   .navbar-item {
     display: inherit;
@@ -350,6 +354,7 @@ a {
   }
   #burguer-menu {
     display: block;
+    height: 100%;
     margin-left: 5vh;
     cursor: pointer;
     background-color: inherit;
@@ -368,14 +373,17 @@ a {
     display: block;
     width: 9vw;
     height: 1vw;
-    margin-top: 2.7vw;
+    margin-top: 2.5vw;
     margin-left: 0.2vw;
     margin-right: 0.2vw;
     margin-bottom: -1vw;
     background-color: var(--FontColor);
   }
+  #top-meat {
+    margin-top: 0vw;
+  }
   #settings-container {
-    top: 0.5em;
+    top: 0.6em;
     left: 65vw;
     width: 35vw;
   }
