change hover color of settings

--- a/css/master.css
+++ b/css/master.css
@@ -141,7 +141,7 @@ a {
   padding-top: 1vh;
 }
 .settings-item:hover {
-  background-color: var(--TextHoverColor);
+  background-color: var(--GridItemColor);
 }
 #page-container {
   position: relative;
