--- a/css/master.css
+++ b/css/master.css
@@ -98,9 +98,23 @@ a {
   position: absolute;
   top: 0.3em;
   left: 7vw;
+  width: 4em;
+  height: 4em;
+  background-color: var(--GridItemColor);
+  background-color: transparent;
+  border-radius: 50%;
+  cursor: pointer;
+  text-align: center;
 }
 #my-logo {
-  width: 5em;
+  display: none;
+  width: 80%;
+  filter: grayscale(100%);
+  margin: 0;
+  margin-top: 10%;
+}
+#my-logo:hover {
+  filter: grayscale(0%);
 }
 #settings-container {
   position: absolute;
@@ -176,7 +190,7 @@ a {
 #my-name-in-footer {
   display: inline-block;
   color: var(--FontColor);
-  font-size: calc(0.9 * var(--TextFontSize));
+  font-size: calc(0.8 * var(--TextFontSize));
   margin: 0.5em;
 }
 #code-symbol {
@@ -193,7 +207,7 @@ a {
   margin: 0.5em;
   margin-right: 0;
   margin-bottom: 0em;
-  vertical-align: sub;
+  vertical-align:sub;
   border-width: 0;
   width: 4em;
 }
@@ -313,6 +327,9 @@ a {
   }
   #footer {
     height: 30vh;
+  }
+  #my-name-in-footer {
+    font-size: calc(0.7 * var(--TextFontSize));
   }
 }
 @media only screen and (max-width: 768px) and (orientation: portrait) {
