--- a/css/about.css
+++ b/css/about.css
@@ -21,11 +21,12 @@
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
 }
+
 @media only screen and (max-width: 400px) {
   #my-photo {
     margin-left: 0em;
   }
-  #footer {
+  #footer-content {
     background-color: var(--NavBarColor);
   }
   #footer-contact-logo-container {
