--- a/css/apps.css
+++ b/css/apps.css
@@ -71,7 +71,7 @@ body {
   margin-left: 20%;
 }
 
-#footer {
+#footer-content {
   background-color: var(--NavBarColor);
 }
 #footer-contact-logo-container {
