--- a/css/contact.css
+++ b/css/contact.css
@@ -15,15 +15,22 @@ h1 {
   font-size: 3vw;
   text-align: center;
 }
-.contact-logo {
+.contact-logo-container {
+  display: inline-block;
   width: 10vw;
+  height: 10vw;
   margin: 2vw;
   padding: 1vw;
   border: var(--UnselectedBorderColor) solid 2px;
   border-radius: 25px;
 }
-.contact-logo:hover {
+.contact-logo-container:hover {
   border-color: var(--FancyColor);
+}
+.contact-logo {
+  width: 100%;
+  height: 100%;
+  padding: 0;
 }
 
 @media only screen and (max-width: 768px) and (orientation: portrait){
@@ -31,9 +38,14 @@ h1 {
     font-size: 4vw;
     margin-top: 15vh;
   }
-  .contact-logo {
+  .contact-logo-container {
     width: 20vw;
+    height: 20vw;
     display: block;
+    margin-top: 5vh;
     margin-bottom: 5vh;
     margin-left: 40vw;
+  }
+  #linkedin-logo {
+    height: 90%;
   }
