added ronin link

--- a/css/master.css
+++ b/css/master.css
@@ -222,8 +222,8 @@ a {
 }
 .footer-contact-logo {
   width: 10%;
-  margin-left: 1.2em;
-  margin-right: 1.2em;
+  margin-left: 2%;
+  margin-right: 2%;
   margin-top: 0;
 }
 #my-footer-logo {
