added resume page

--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,6 @@
 #about {
   color: var(--NavBarActiveColor);
-  pointer-events: none;
+  /* pointer-events: none; */
 }
 .about {
   width: var(--ColumnWidth);
