--- a/css/blog.css
+++ b/css/blog.css
@@ -140,3 +140,15 @@ body {
     margin-bottom: 2em;
   }
 }
+
+@media only screen and (max-width: 400px) {
+  #footer-content {
+    background-color: var(--NavBarColor);
+  }
+  #footer-contact-logo-container {
+    display: inline-block;
+  }
+  #return-arrow-container {
+    display: inline-block;
+  }
+}
