--- a/css/blog.css
+++ b/css/blog.css
@@ -103,7 +103,7 @@ body {
 .Geology {
   background-color: rgb(231, 168, 95);
 }
-.Health {
+.General {
   background-color: rgb(210, 106, 106);
 }
 .grid_link {
