--- a/css/blog_entry.css
+++ b/css/blog_entry.css
@@ -38,6 +38,10 @@ h1, h2 {
   color: var(--BlogHeaderColor);
 }
 
+strong {
+  color: var(--EmphFontColor);
+}
+
 #blog-entry-header {
   text-align: left;
   font-size: calc(1.5 * var(--TextFontSize));
