--- a/css/blog.css
+++ b/css/blog.css
@@ -23,7 +23,7 @@ body {
   height: auto;
   margin: var(--grid_item_margin);
   cursor: pointer;
-  -webkit-tap-highlight-color: transparent;
+  /* -webkit-tap-highlight-color: transparent; */
 }
 .grid_item_content {
   margin: 0;
@@ -31,7 +31,7 @@ body {
   background-color: var(--GridItemColor);
   border-radius: 25px;
   padding: 1.2em;
-  -webkit-tap-highlight-color: transparent;
+  /* -webkit-tap-highlight-color: transparent; */
 }
 .grid_item_content:hover > * {
   /* border: var(--grid_item_border_width) solid var(--FancyColor); */
