--- a/css/blog.css
+++ b/css/blog.css
@@ -117,7 +117,7 @@ body {
 
 /* Uncomment the following when sufficient number of blog entries... */
 
-#footer {
+#footer-content {
   background-color: var(--NavBarColor);
 }
 
@@ -141,7 +141,7 @@ body {
   }
 }
 
-@media only screen and (max-width: 400px) {
+/* @media only screen and (max-width: 400px) {
   #footer-content {
     background-color: var(--NavBarColor);
   }
@@ -151,4 +151,4 @@ body {
   #return-arrow-container {
     display: inline-block;
   }
-}
+} */
