--- a/css/blog.css
+++ b/css/blog.css
@@ -100,7 +100,7 @@ body {
 .Physics {
   background-color: rgb(148, 158, 189);
 }
-.Geology {
+.Statistics {
   background-color: rgb(231, 168, 95);
 }
 .General {
