--- a/css/blog_entry.css
+++ b/css/blog_entry.css
@@ -21,6 +21,7 @@ pre, code {
   white-space: pre;
   border-radius: 8px;
   font-size: calc(0.71 * var(--TextFontSize));
+  overflow-x: scroll;
 }
 
 .dataframe-container {
